<resources>
    <string name="app_name">EventManagement</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="contactus">Contact US</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_myactivities">My Activities</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_add">Add</string>
    <string name="nav_privacypolicy">Privacy Policy </string>


    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>

    <!-- Login layout -->
    <string name="btn_login">LOGIN</string>
    <string name="hint_login_email">Enter your E-mail</string>
    <string name="hint_login_password">Enter your password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="btn_login_signup"><u>Not a member yet?</u></string>
    <string name="auth_failed">Unable to login!</string>
    <string name="google_auth_failed">Unable to login through Google!</string>

    <string name="facebook_app_id">2764260256938189</string>
    <string name="fb_login_protocol_scheme">fb2764260256938189</string>


    <!-- Signup layout -->
    <string name="hint_signup_firstname">Enter your first name</string>
    <string name="hint_signup_lastname">Enter your last name</string>
    <string name="hint_signup_email">Enter your email address</string>
    <string name="hint_signup_password">Enter your password</string>
    <string name="hint_signup_password2">Repeat your password</string>
    <string name="btn_signup">BECOME A MEMBER</string>
    <string name="title_activity_maps">Map</string>
    <string name="food_provider">Food Provider</string>
    <string name="upload_image">Upload Image!</string>
    <string name="choose_image">Choose Image!</string>
    <string name="no_of_plates"># of Plates</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="description_of_food">Food Description</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="save">Save!</string>
    <string name="pickup">Pickup!</string>
    <string name="No_of_plates"># of Plates</string>
    <string name="Food_provider" />
    <string name="Pickup_time">P</string>
    <string name="set_time">Set Time</string>
    <string name="Description_of_food">F</string>
    <string name="Contact_number">C</string>
    <string name="Address">A</string>
    <string name="No_of_Plates"># of Plates</string>
    <string name="Pickup_Time">Pickup Time</string>
    <string name="Description_of_Food">
        Description</string>
    <string name="Pick_Address">Address</string>
    <string name="Contact_Number">Contact Number</string>
    <string name="Get_date">Get Date</string>
    <string name="Date_of_pickup">Date of Pickup</string>
    <string name="pickup_time_hh_mm">Pickup Time(hh:mm)</string>
    <string name="house_number">House number</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="btn_map">Show On Map!</string>
    <string name="other">Other</string>

</resources>
