<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lux.eventmanagement.fragments.HomeListFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.lux.eventmanagement.fragments.ProviderProfile"
        android:label="@string/nav_profile"
        tools:layout="@layout/main_activity_jehan" />

    <fragment
        android:id="@+id/nav_addnewentry"
        android:name="com.lux.eventmanagement.fragments.AddEventDetailsFragment"
        android:label="@string/nav_add"
        tools:layout="@layout/layout_addevent">
        <action
            android:id="@+id/nav_contact_uspage_show"
            app:destination="@id/nav_contact_uspage" />
    </fragment>

    <fragment
        android:id="@+id/nav_aboutuspage"
        android:name="com.lux.eventmanagement.fragments.AboutusFragment"
        android:label="@string/nav_about_us"
        tools:layout="@layout/fragment_aboutus" />

    <fragment
        android:id="@+id/nav_contact_uspage"
        android:name="com.lux.eventmanagement.fragments.ContactUsFragment"
        android:label="@string/contactus"
        tools:layout="@layout/fragment_contactus" />


    <fragment
        android:id="@+id/nav_myractivities"
        android:name="com.lux.eventmanagement.fragments.MyEntriesListFrgament"
        android:label="@string/nav_myactivities"
        tools:layout="@layout/layout_myentries">
        <action
            android:id="@+id/action_nav_myractivities_to_nav_details"
            app:destination="@id/nav_detailspage"
            app:popUpTo="@id/nav_detailspage"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_detailspage"
        android:name="com.lux.eventmanagement.fragments."
        android:label="fragment_page"
        tools:layout="@layout/fragment_details" />
</navigation>