<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LoginActivity">





    <ImageView
        android:id="@+id/login_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />





    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/login_imageview">


        <TextView
            android:id="@+id/login_app_title"
            style="@android:style/TextAppearance.Large"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/app_name"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/login_imageview"

            />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/hint_login_email"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_login_password"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="219dp"
            android:layout_height="49dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_login"
            />


    </LinearLayout>



    <TextView
        android:id="@+id/login_txtViewBtn_signup"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_login_signup"
         />


</RelativeLayout>