<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".AddFood"
        tools:ignore="RedundantNamespace">
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
           >
        <LinearLayout
            android:id="@+id/layout_button"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnChoose"
                android:text="@string/choose_image"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnUpload"
                android:text="@string/upload_image"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="ButtonStyle" />
        </LinearLayout>


        <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/layout_button"
            android:src="@drawable/checkmark"
            tools:ignore="ContentDescription" />



            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                tools:ignore="UselessParent">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:weightSum="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".3"
                        android:textSize="18dp"
                        android:layout_height="wrap_content"
                        android:text="Title :">

                    </TextView>
                    <EditText
                        android:id="@+id/title"
                        android:layout_width="0dp"
                        android:layout_weight=".7"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="address"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:weightSum="1"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".3"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:text="About : ">
                    </TextView>
                    <EditText
                        android:id="@+id/description"
                        android:layout_width="0dp"
                        android:layout_weight=".7"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:inputType="textMultiLine"
                        android:lines="5"
                        android:scrollHorizontally="false"
                        android:hint="description">
                    </EditText>



                </LinearLayout>



            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/saveBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/save"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white" />

    </RelativeLayout>

